syntax = "proto3";

package login_v1;

option go_package="github.com/semho/chat-microservices/pkg/login_v1;login_v1";

service LoginV1 {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
}

message GetRefreshTokenRequest {
  string old_refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}
